# personal-page

./: .gitignore  Makefile  README.md  about-fr.html  about.html  index-fr.html  index.html  main.js  new_course.sh  new_presentation.sh  new_project.sh  new_publication.sh  publications.html  site.cabal  site.hs  style.css
courses/: 2015-09-15-CSR.md  2016-09-13-CSR.md  2016-12-01-syr.md
css/: default.css  style-mobile.css  style.css
design/: style.css
files/: cv.tex
js/: jquery-ui.min.js  main.js
presentations/: 2015-12-12-first-paper-at-the-greencom-conference.md  2016-02-04-grid-winter-school.md  2016-05-25-ersd.md  2016-07-07-presentation-at-the-compas-conference.md  2016-11-24-how-many-green-cloud-users-are-necessary-to-save-energy.md  2017-11-24-involving-users-in-the-design-of-energyaware-cloud-computing-systems.md
projects/: 2015-11-07-boat-project.md  2015-11-07-bomberman.md  2015-11-07-dynamic-lstopo.md
publications/: 2014-10-01-crowd-a-platform-for-the-crowdsourcing-of-complex-tasks.md  2015-06-01-sequential-performance-raising-awareness-of-the-gory-details.md  2015-07-01-energyefficient-cloud-elasticity-for-datadriven-applications.md  2015-09-01-energyefficient-useroriented-cloud-elasticity-for-datadriven-applications.md  2015-10-06-master-thesis-report-energyefficient-cloud-elasticity-for-datadriven-applications.md  2015-12-01-energyefficient-useroriented-cloud-elasticity-for-datadriven-applications.md  2017-03-01-how-much-energy-can-green-hpc-cloud-users-save.md  (+6 more)
templates/: course.html  courseitem.html  courses.html  default.html  index.html  (+8 more)
(+11 files in other folders)
